--- a/Assignment3/version36/PersonalisedMobilePainDiary/app/src/main/res/layout/fragment_reports.xml
+++ b/Assignment3/version36/PersonalisedMobilePainDiary/app/src/main/res/layout/fragment_reports.xml
@@ -50,15 +50,22 @@
         android:layout_height="wrap_content"
         android:spinnerMode="dialog" />
 
+    <FrameLayout
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent">
 
-    <com.github.mikephil.charting.charts.PieChart
-        android:id="@+id/pcCharts"
-        android:layout_width="match_parent"
-        android:layout_height="266dp"></com.github.mikephil.charting.charts.PieChart>
+        <com.github.mikephil.charting.charts.PieChart
+            android:id="@+id/pcCharts"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
 
-    <com.github.mikephil.charting.charts.LineChart
-        android:id="@+id/lineCharts"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        />
+        <com.github.mikephil.charting.charts.LineChart
+            android:id="@+id/lineCharts"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            />
+
+    </FrameLayout>
+
+
 </LinearLayout>
