--- a/Assignment3/version40/PersonalisedMobilePainDiary/app/src/main/res/layout/fragment_reports.xml
+++ b/Assignment3/version40/PersonalisedMobilePainDiary/app/src/main/res/layout/fragment_reports.xml
@@ -69,8 +69,7 @@
     <TextView
         android:id="@+id/textView20"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Correlation value: " />
+        android:layout_height="wrap_content" />
 
 
 </LinearLayout>
